# vienna

./: CHANGELOG.md  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: canvas.rs  color.rs  component.rs  event.rs  lib.rs  registration.rs  run_result.rs  shape.rs  state.rs  value.rs  widget.rs
crates/common/src/widget/: button_rectangle.rs  moving_circle.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: builder.rs  config.rs  engine.rs  error.rs  game_state.rs  ggez.rs  lib.rs  plugin.rs  plugin_manager.rs  renderer.rs  updater.rs  widget.rs
crates/engine/src/backend/: coffee.rs  ggez.rs
crates/engine/src/backend/coffee/: renderer.rs  run.rs  updater.rs
crates/engine/src/backend/ggez/: renderer.rs  run.rs  updater.rs
crates/engine/src/core/: coffee.rs  ggez.rs
crates/engine/src/core/coffee/: renderer.rs  run.rs  updater.rs  widget.rs
crates/engine/src/core/ggez/: renderer.rs  run.rs  updater.rs  widget.rs
crates/engine/src/plugin/: mock.rs  wasm.rs
crates/engine/src/plugin/mock/: error.rs  manager.rs  plugin.rs
crates/engine/src/plugin/wasm/: error.rs  manager.rs  plugin.rs
crates/runner/: Cargo.toml  README.md
crates/runner/src/: main.rs
crates/sdk/: Cargo.toml
crates/sdk-plugin/: Cargo.toml  README.md
crates/sdk-plugin/src/: error.rs  internal.rs  lib.rs  plugin.rs  prelude.rs  sdk.rs  widget.rs
crates/sdk/src/: error.rs  internal.rs  lib.rs  load.rs  prelude.rs  registration.rs  sdk.rs
plugins/minimal/: Cargo.toml
plugins/minimal/src/: lib.rs
plugins/test/: Cargo.toml
plugins/test/src/: lib.rs
rfcs/: 001-rfc-process.md  002-plugins.md  003-events.md  004-widgets.md  005-plugins-widgets-events.md  006-input-events-messages.md
tests/fixtures/: minimal.wat  test.wat
