[package]
name = "vienna-common"
version = "0.1.0"
description = "The main crate powering the Vienna game engine."
repository = "https://github.com/rustic-games/vienna"
readme = "README.md"
keywords = ["game-engine", "visual-novel"]
categories = ["game-engines"]
authors = ["Jean Mertz <git@jeanmertz.com>"]
license = "Proprietary"
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
