[package]
name = "vienna-engine"
version = "0.1.0"
description = "The main crate powering the Vienna game engine."
repository = "https://github.com/rustic-games/vienna"
readme = "README.md"
keywords = ["game-engine", "visual-novel"]
categories = ["game-engines"]
authors = ["Jean Mertz <git@jeanmertz.com>"]
license = "Proprietary"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
common = { package = "vienna-common", path = "../common" }
displaydoc = "0.1"
ggez = { version = "0.5", default-features = false }
thiserror = "1.0"
walkdir = "2.3"
wasmtime = { version = "0.16", default-features = false }

[dev-dependencies]
tempfile = "3.1"

# The "wat" feature is enabled during development to allow using text-based wasm
# fixtures.
#
# The feature is disabled in production to reduce compile times. Providing a
# text-based wasm plugin is uncommon, as plugins will be rather large, and most
# likely compiled from other languages.
wasmtime = { version = "0.16", features = ["wat"], default-features = false }
