[package]
name = "vienna-engine"
version = "0.1.0"
description = "The main crate powering the Vienna game engine."
repository = "https://github.com/rustic-games/vienna"
readme = "README.md"
keywords = ["game-engine", "visual-novel"]
categories = ["game-engines"]
authors = ["Jean Mertz <git@jeanmertz.com>"]
license = "Proprietary"
edition = "2018"
publish = false

[features]
default = ["backend-ggez"]
backend-ggez = ["ggez"]
backend-coffee = ["coffee", "once_cell"]

[dependencies]
anyhow = "1.0"
common = { package = "vienna-common", path = "../common" }
displaydoc = "0.1"
ggez = { version = "0.5", default-features = false, optional = true }
once_cell = { version = "1.4.0", optional = true }
thiserror = "1.0"
walkdir = "2.3"
wasmtime = { version = "0.16", default-features = false }
wasmtime-wasi = { version = "0.16", default-features = false }

# - https://github.com/hecrj/coffee/pull/128
# - https://github.com/hecrj/coffee/pull/129
# - https://github.com/hecrj/coffee/pull/130
coffee = { git = "https://github.com/rustic-games/coffee", rev = "merged", features = ["opengl", "debug"], optional = true }

[dev-dependencies]
tempfile = "3.1"

# The "wat" feature is enabled during development to allow using text-based wasm
# fixtures.
#
# The feature is disabled in production to reduce compile times. Providing a
# text-based wasm plugin is uncommon, as plugins will be rather large, and most
# likely compiled from other languages.
wasmtime = { version = "0.16", features = ["wat"], default-features = false }
