[package]
name = "vienna"
version = "0.1.0"
description = "The Vienna SDK to build engine plugins in Rust."
repository = "https://github.com/rustic-games/vienna"
readme = "README.md"
keywords = ["game-engine", "visual-novel"]
categories = ["game-engines"]
authors = ["Jean Mertz <git@jeanmertz.com>"]
license = "Proprietary"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
thiserror = "1.0"
