[package]
name = "plugin-minimal"
version = "0.1.0"
description = "A minimal implementation of a Vienna engine plugin."
repository = "https://github.com/rustic-games/vienna"
readme = "README.md"
keywords = ["game-engine", "visual-novel"]
categories = ["game-engines"]
authors = ["Jean Mertz <git@jeanmertz.com>"]
license = "Proprietary"
edition = "2018"
publish = false

[lib]
crate-type = ['cdylib']
