[package]
name = "test"
version = "0.1.0"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
vienna = { package = "vienna-plugin", path = "../../crates/sdk-plugin" }
