[package]
name = "plugin-test"
version = "0.1.0"
description = "A test plugin to validate the functionality of the Vienna engine."
repository = "https://github.com/rustic-games/vienna"
readme = "README.md"
keywords = ["game-engine", "visual-novel"]
categories = ["game-engines"]
authors = ["Jean Mertz <git@jeanmertz.com>"]
license = "Proprietary"
edition = "2018"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
vienna = { package = "vienna-plugin", path = "../../crates/sdk-plugin" }
